build(library-components): added RxJava dependency

--- a/library-components/build.gradle
+++ b/library-components/build.gradle
@@ -42,6 +42,8 @@ apply from: rootProject.file('dependencies.gradle')
 dependencies {
   api project.ext.dependencies.androidSupport.appCompat
 
+  api project.ext.dependencies.rxJava
+
 }
 
 ext.releaseInfo = [
