--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,7 +24,8 @@ ext.dependencies = [
     rxJava: 'io.reactivex.rxjava2:rxjava:2.1.12',
 
     androidSupport: [
-        appCompat: 'com.android.support:appcompat-v7:27.1.0'
+        appCompat: 'com.android.support:appcompat-v7:27.1.0',
+        design: 'com.android.support:design:27.1.0',
     ],
 
     guava: 'com.google.guava:guava:20.0-rc1',
