--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,6 +49,8 @@ dependencies {
   implementation project(':library-components')
 
   implementation project.ext.dependencies.rxJava
+
+  implementation project.ext.dependencies.androidSupport.design
 }
 
 task deleteOutputDirectories {
